--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "main-website2022",
+  "homepage":"http://ISTE-SC-MANIT.github.io/main-website2022",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
