--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.3",
     "react-dom": "^18.2.0",
+    "react-ionicons": "^4.2.0",
     "react-router-dom": "^6.7.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
